# GreyBoxModel

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
data/: demo_data.csv
greyboxmodel/: __init__.py  base_model.py  fit.py  model.py  predict.py  prefit.py  train.py
greyboxmodel/utils/: visualization.py
notebooks/: 03-greybox_TiTe_v2.ipynb  04-greybox_comp.ipynb
src/greyboxmodel/: base_model.py  model.py
tests/: test_methods.py
