# pyproject.toml

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[metadata]
name = "greyboxmodel"
version = "1.0.0"
description = "A Python package for Grey Box Modelling"
authors = [
    {name = "Carlos Alejandro Perez Garcia", email = "cpgarcia518@gmail.com"},
]
license = "MIT"
url = "https://github.com/cpgarcia518/GreyBoxModel"

[options]
packages = find:
install_requires = [
    # List your package dependencies here
]
requires-python = ">=3.8.1"
dynamic = ["version"]

[options.entry_points]
console_scripts =
    myscript = mypackage.mymodule:main
